force-app/main/default/objects/geopointe__Assignment_Plan__c/geopointe__Assignment_Plan__c.object-meta.xml
<CustomObject>
    <description>The is a legacy Geopointe object. It is no longer used and can be safely deleted.</description>
    <label>DELETE ME (Assignment Plan)</label>
    <nameField>
        <label>Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DELETE ME</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>