force-app/main/default/objects/geopointe__Assignment_Plan__c/fields/geopointe__Description__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Description__c</fullName>
    <inlineHelpText>Short description for this Assignment Plan.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>